# L4YAML

./: .gitignore  .gitmodules  ADVERSARIAL_INSTANTIATION.md  ANALYSIS.md  AUTO_EQ_LEMMA_COLLISION.md  BRIDGING.md  CMakeLists.txt  COMPARISON.md  C_PYTHON_APIs.md  C_PYTHON_RUST_APIs.md  DUPLICATE_KEYS.md  Demo.lean  EMITTER_SCANNABILITY_PLAN.md  EXCEPTIONS.md  FLOW_BALANCED_CHAIN_RESTRICTION.md  INTERACTIONS.md  L4YAML.lean  LICENSE  LIMITS.md  Lean4Yaml.lean  MISMATCH.md  Makefile  NS-CHAR-PREDICATE-GAP.md  OPTION-A-FINAL-ASSESSMENT.md  OPTION-A-PHASE2-PROGRESS.md  P10.11-CASCADE-COMPLETE.md  P10.11-COMPLETE-JOURNEY.md  P10.11-COMPLETE.md  P10.11-DAY-SUMMARY.md  P10.11-EXECUTIVE-SUMMARY.md  P10.11-FINAL-SESSION-STATUS.md  P10.11-FINAL-STATUS.md  P10.11-JOURNEY-COMPLETE.md  P10.11-OPTION2-COMPLETE.md  P10.11-PROGRESS-UPDATE.md  P10.11-PROGRESS.md  P10.11-REFACTORING-PROGRESS.md  P10.11-REFACTORING-SESSION2-COMPLETE.md  P10.11-SCAN-FIRST-COMPLETE.md  P10.11-SCANKEY-SCANVALUE-COMPLETE.md  (+42 more)
.github/workflows/: test-coverage.yml
Blueprint/: 01-terminology.md  02-architecture.md  03-code-organization.md  04-capstones.md  05-current-state.md  06-discipline.md  07-initiative-3-append-only.md  08-initiative-4-intrinsic-foundations.md  README.md
Demo/: Runner.lean
L4YAML/: CharPredicates.lean  Config.lean  Dump.lean  Emitter.lean  FFI.lean  Grammar.lean  KeyTheorem.lean  Limits.lean  Scanner.lean  Schema.lean  Surface.lean  Token.lean  TokenParser.lean  Types.lean  YAML_PRODUCTIONS.md
L4YAML/Algebra/: AnchorMap.lean  Combinators.lean  Equivalence.lean  Fuel.lean  Idempotence.lean  Indent.lean  LawfulBEq.lean  Position.lean  README.md  Schema.lean  StringList.lean  Token.lean  TokenStream.lean  Value.lean
L4YAML/Config/: Config.lean  Limits.lean  LoadConfig.lean
L4YAML/FFI/: FFI.lean
L4YAML/Indexed/: CharStream.lean  README.md  Range.lean  RepGraph.lean  TokenStream.lean
L4YAML/Output/: Dump.lean  Emitter.lean
L4YAML/Parser/: Composition.lean  Fuel.lean  FuelIx.lean  State.lean  (+3 more)
Lean4Yaml/: CharPredicates.lean  Config.lean  Dump.lean  Emitter.lean  FFI.lean  Grammar.lean  Limits.lean  Scanner.lean  Schema.lean  Stream.lean  Surface.lean  Token.lean  TokenParser.lean  Types.lean  YAML_PRODUCTIONS.md  YamlSpec.lean
Tests/: AdversarialGrammarTests.lean  AdversarialInstantiation.lean  AnchorAlias.lean  CharClassTests.lean  CheckStringPos.lean  CollectPlainExplore.lean  CompletenessExplore.lean  CompletenessTests.lean  CompositionExplore.lean  ContentEqExplore.lean  ContentEqRefl.lean  DumpRoundTrip.lean  ErrorStageDiag.lean  ExplicitKeyTests.lean  FlowRegressionCheck.lean  FlowTests.lean  Guards.lean  IteratorTests.lean  LimitTests.lean  Main.lean  MutationSuiteTests.lean  ParseTest.lean  ParserCompare.lean  ParserSpecsExplore.lean  ParserSpecsMinimal.lean  ProductionCoverage.lean  PropertyTests.lean  QueryResults.lean  QuotedFolding.lean  RawParseTests.lean  ScalarStageDiag.lean  ScannerSpecExamples.lean  ScannerTests.lean  SchemaDump.lean  SpecExamples.lean  StringLemmas.lean  TagTests.lean  TryDump.lean  TryParse.lean  TryRoundTrip.lean  (+7 more)
doc/: lake-manifest.json  lakefile.toml
docs/: DESIGN-append-only-tokens.md  adversarialtests.txt  all-verified-tests.txt  anchortests.txt  coverage-advanced.html  coverage-all.html  coverage-block.html  coverage-console.txt  coverage-document.html  coverage-error.html  coverage-flow.html  coverage-scalar.html  coverage-summary.json  cross-lang-comparison.txt  demo.txt  dumproundtrip.txt  errorstagediag.txt  explicitkeytests.txt  flowregressioncheck.txt  flowtests.txt  import_graph.dot  index.html  limittests.txt  mutationtests.txt  parsetest.txt  production-coverage.html  productioncoverage.txt  propertytests.txt  python-ffi-tests.html  python-ffi-tests.txt  python-package-tests.txt  quotedfolding.txt  rawparsetests.txt  scalarstagediag.txt  scannerspecexamples.txt  scannertests.txt  schemadump.txt  specexamples.txt  stringlemmas.txt  tagtests.txt  (+5 more)
docs.internal/: ANALYSIS.md  BRIDGING.md  OPTION-2-FINAL-RESULTS.md  OPTION-A-FINAL-ASSESSMENT.md  OPTION-A-PHASE2-PROGRESS.md  OPTION-A-PROGRESS.md  OPTION-A2-COMPLETE.md  P10.11-CASCADE-COMPLETE.md  P10.11-CASCADE-RESOLUTION-COMPLETE.md  P10.11-COMPLETE-JOURNEY.md  P10.11-COMPLETE.md  P10.11-DAY-SUMMARY.md  P10.11-EXECUTIVE-SUMMARY.md  P10.11-FINAL-COMPLETE-STATUS.md  P10.11-FINAL-STATUS.md  P10.11-FINAL-SUMMARY.md  P10.11-JOURNEY-COMPLETE.md  P10.11-OPTION2-COMPLETE.md  P10.11-OPTION2-FINAL-COMPLETE.md  P10.11-PROGRESS-UPDATE.md  P10.11-PROGRESS.md  P10.11-REFACTORING-COMPLETE.md  P10.11-REFACTORING-PROGRESS.md  P10.11-REFACTORING-SESSION2-COMPLETE.md  P10.11-REFACTORING-SESSION3-PROGRESS.md  P10.11-SCAN-FIRST-COMPLETE.md  P10.11-SCANKEY-SCANVALUE-COMPLETE.md  P10.11-SCANNEXTTOKEN-ANALYSIS.md  P10.11-SESSION-SUMMARY.md  P10.11-TODAY-SUMMARY.md  P10.11-UNWINDINDENTS-REFACTOR-COMPLETE.md  P10.11a-PLAN.md  P10.11a-PROGRESS.md  P10.11a-REFLECTION.md  P10.11a-SUMMARY.md  P10.11b-SUMMARY.md  P10.11c-SUMMARY.md  P10.11d-ATTEMPT-LOG.md  P10.11d-FINAL.md  P10.11d-SUMMARY.md  (+2 more)
ffi/: CMakeLists.txt  l4yaml.h  l4yaml_shim.c  lean4yaml.h  lean4yaml_shim.c  tryparse_c.c
python/: conftest.py  pyproject.toml
python/l4yaml/: __init__.py  _ffi.py  compat.py  exceptions.py  types.py
python/lean4yaml/: __init__.py  _ffi.py  compat.py  exceptions.py  types.py
python/tests/: test_compat.py  test_dump.py  test_limits.py  test_parse.py  test_roundtrip.py
rust/: Cargo.toml
scripts/: build-api-docs.sh  generate-test-reports.py  html-to-pdf.py  refactor-phase-1.sh  refactor-phase-10-roundtrip.sh  refactor-phase-1b.sh  refactor-phase-4-contracts.sh  refactor-phase-4-errors.sh  refactor-phase-4-foundation.sh  refactor-phase-4-schema.sh  refactor-phase-5-production.sh  refactor-phase-6-scanner.sh  refactor-phase-7-output.sh  refactor-phase-8-parser.sh  refactor-phase-9-coupling.sh  run-all-tests.sh  verify_yaml_spec_annotations.py
tests/: analyze_coverage.py  analyze_coverage_deep.py
tools/: AnalyzeThms.lean  CollectStats.lean  ExtractDepGraph.lean  ExtractSpecExamples.lean  README.md  TheoremGraph.lean
(+3193 files in other folders)
