<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>l4yaml</name>
  <version>0.4.6</version>
  <description>A machine-verified YAML 1.2.2 parser, schema layer, and dumper written in Lean 4</description>

  <maintainer email="nfr@jpl.nasa.gov">Nicolas Rouquette</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
