[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "l4yaml"
# Keep this in sync with python/l4yaml/__init__.py's __version__,
# and with the version declarations in lakefile.toml and the rust
# crates.  See "Versioning" in the project README.
version = "0.4.6"
description = "Python bindings for the verified Lean 4 YAML parser"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "TLR Integration"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["l4yaml*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:launch_testing -p no:launch_testing_ros"
